==> ingeniero2019/device-os/hal/src/nRF52840/spi_hal.cpp <==
#include "logging.h"
#include "nrf_gpio.h"
#include "nrfx_spim.h"
#include "nrfx_spis.h"
#include "spi_hal.h"
#include "pinmap_hal.h"
#include "pinmap_impl.h"
#include "gpio_hal.h"
#include "interrupts_hal.h"
#include "concurrent_hal.h"
#include "delay_hal.h"
#include "check.h"
#define DEFAULT_SPI_MODE        SPI_MODE_MASTER
#define DEFAULT_DATA_MODE       SPI_MODE3
#define DEFAULT_BIT_ORDER       MSBFIRST
#define DEFAULT_SPI_CLOCK       SPI_CLOCK_DIV256

void hal_spi_init(hal_spi_interface_t spi) {
    os_thread_scheduling(false, nullptr);
    if (spiMap[spi].mutex == nullptr) {
        os_mutex_recursive_create(&spiMap[spi].mutex);
    }
    os_thread_scheduling(true, nullptr);

    hal_spi_acquire(spi, nullptr);

    if (spiMap[spi].state == HAL_SPI_STATE_ENABLED) {
        spiUninit(spi);
    }

    // Default: SPI_MODE_MASTER, SPI_MODE3, MSBFIRST, 16MHZ
    spiMap[spi].state = HAL_SPI_STATE_DISABLED;
    spiMap[spi].transmitting = false;
    spiMap[spi].spi_mode = DEFAULT_SPI_MODE;
    spiMap[spi].bit_order = DEFAULT_BIT_ORDER;
    spiMap[spi].data_mode = DEFAULT_DATA_MODE;
    spiMap[spi].clock = DEFAULT_SPI_CLOCK;
    spiMap[spi].spi_ss_state = 0;
    spiMap[spi].dma_user_callback = nullptr;
    spiMap[spi].select_user_callback = nullptr;
    spiMap[spi].transfer_length = 0;

    hal_spi_release(spi, nullptr);
}

void hal_spi_begin_ext(hal_spi_interface_t spi, hal_spi_mode_t mode, uint16_t pin, void* reserved) {
    if (spi >= TOTAL_SPI) {
        return;
    }

    if (spi == HAL_SPI_INTERFACE1 && mode == SPI_MODE_SLAVE) {
        // HAL_SPI_INTERFACE1 does not support slave mode
        return;
    }

    if (spiMap[spi].state == HAL_SPI_STATE_ENABLED) {
        // Make sure we reset the enabled state
        spiUninit(spi);
        spiMap[spi].state = HAL_SPI_STATE_DISABLED;
    }

    if (pin == SPI_DEFAULT_SS) {
        if (spi == HAL_SPI_INTERFACE1) {
            spiMap[spi].ss_pin = SS;
        } else if (spi == HAL_SPI_INTERFACE2) {
            spiMap[spi].ss_pin = D5;
        } else {
            spiMap[spi].ss_pin = PIN_INVALID;
        }
    } else {
        spiMap[spi].ss_pin = pin;
    }

    if (mode == SPI_MODE_SLAVE && !HAL_Pin_Is_Valid(spiMap[spi].ss_pin)) {
        // Slave mode requires a valid pin
        return;
    }

    spiMap[spi].spi_mode = mode;
    spiInit(spi, mode);
    spiMap[spi].state = HAL_SPI_STATE_ENABLED;
}

void hal_spi_set_bit_order(hal_spi_interface_t spi, uint8_t order) {
    spiMap[spi].bit_order = order;
    if (spiMap[spi].state == HAL_SPI_STATE_ENABLED) {
        spiUninit(spi);
        spiInit(spi, spiMap[spi].spi_mode);
    }
}

void hal_spi_set_data_mode(hal_spi_interface_t spi, uint8_t mode) {
    spiMap[spi].data_mode = mode;
    if (spiMap[spi].state == HAL_SPI_STATE_ENABLED) {
        spiUninit(spi);
        spiInit(spi, spiMap[spi].spi_mode);
    }
}

void hal_spi_set_clock_divider(hal_spi_interface_t spi, uint8_t rate) {
    // actual speed is the system clock divided by some scalar
    spiMap[spi].clock = rate;
    if (spiMap[spi].state == HAL_SPI_STATE_ENABLED) {
        spiUninit(spi);
        spiInit(spi, spiMap[spi].spi_mode);
    }
}

uint16_t hal_spi_transfer(hal_spi_interface_t spi, uint16_t data) {
    if (spiMap[spi].spi_mode == SPI_MODE_SLAVE) {
        return 0;
    }
    if (spiMap[spi].state != HAL_SPI_STATE_ENABLED) {
        return 0;
    }

    uint8_t tx_buffer __attribute__((__aligned__(4)));
    uint8_t rx_buffer __attribute__((__aligned__(4)));

    // Wait for SPI transfer finished
    while(spiMap[spi].transmitting) {
        ;
    }

    tx_buffer = data;

    spiMap[spi].dma_user_callback = nullptr;
    spiTransfer(spi, &tx_buffer, &rx_buffer, 1);

    // Wait for SPI transfer finished
    while(spiMap[spi].transmitting) {
        ;
    }

    return rx_buffer;
}

void hal_spi_info(hal_spi_interface_t spi, hal_spi_info_t* info, void* reserved) {
    info->system_clock = 64000000;
    if (info->version >= HAL_SPI_INFO_VERSION_1) {
        int32_t state = HAL_disable_irq();
        if (spiMap[spi].state == HAL_SPI_STATE_ENABLED) {
            switch (spiMap[spi].clock) {
                case SPI_CLOCK_DIV2:   info->clock = info->system_clock / 2;   break;
                case SPI_CLOCK_DIV4:   info->clock = info->system_clock / 4;   break;
                case SPI_CLOCK_DIV8:   info->clock = info->system_clock / 8;   break;
                case SPI_CLOCK_DIV16:  info->clock = info->system_clock / 16;  break;
                case SPI_CLOCK_DIV32:  info->clock = info->system_clock / 32;  break;
                case SPI_CLOCK_DIV64:  info->clock = info->system_clock / 64;  break;
                case SPI_CLOCK_DIV128: info->clock = info->system_clock / 128; break;
                case SPI_CLOCK_DIV256: info->clock = info->system_clock / 256; break;
                default: info->clock = 0;
            }
        } else {
            info->clock = 0;
        }
        info->default_settings = ((spiMap[spi].spi_mode  == DEFAULT_SPI_MODE) &&
                                  (spiMap[spi].bit_order == DEFAULT_BIT_ORDER) &&
                                  (spiMap[spi].data_mode == DEFAULT_DATA_MODE) &&
                                  (spiMap[spi].clock     == DEFAULT_SPI_CLOCK));
        info->enabled = (spiMap[spi].state == HAL_SPI_STATE_ENABLED);
        info->mode = spiMap[spi].spi_mode;
        info->bit_order = spiMap[spi].bit_order;
        info->data_mode = spiMap[spi].data_mode;
        if (info->version >= HAL_SPI_INFO_VERSION_2) {
            info->ss_pin = spiMap[spi].ss_pin;
        }
        HAL_enable_irq(state);
    }
}

void hal_spi_transfer_dma(hal_spi_interface_t spi, void* tx_buffer, void* rx_buffer, uint32_t length, hal_spi_dma_user_callback userCallback) {
    if (length == 0) {
        return;
    }
    if (spiMap[spi].state != HAL_SPI_STATE_ENABLED) {
        return;
    }

    while(spiMap[spi].transmitting) {
        ;
    }

    spiMap[spi].dma_user_callback = userCallback;
    if (spiMap[spi].spi_mode == SPI_MODE_MASTER) {
        SPARK_ASSERT(spiTransfer(spi, (uint8_t *)tx_buffer, (uint8_t *)rx_buffer, length) == length);
    } else {
        // reset transfer length
        spiMap[spi].transfer_length = 0;
        spiMap[spi].slave_buf_length = length;
        spiMap[spi].slave_tx_buf = tx_buffer;
        spiMap[spi].slave_rx_buf = rx_buffer;
        uint32_t err_code = nrfx_spis_buffers_set(spiMap[spi].slave,
                                            (uint8_t *)spiMap[spi].slave_tx_buf,
                                            spiMap[spi].slave_buf_length,
                                            (uint8_t *)spiMap[spi].slave_rx_buf,
                                            spiMap[spi].slave_buf_length);
        if (err_code == NRF_ERROR_INVALID_STATE) {
            // LOG_DEBUG(WARN, "nrfx_spis_buffers_set, invalid state");
        } else {
            SPARK_ASSERT(err_code == NRF_SUCCESS);
            spiMap[spi].transmitting = true;
        }
    }
}

void hal_spi_transfer_dma_cancel(hal_spi_interface_t spi) {
    if (!spiMap[spi].transmitting) {
        return;
    }
    if (spiMap[spi].spi_mode == SPI_MODE_MASTER) {
        spiTransferCancel(spi);
        spiMap[spi].transmitting = false;
        spiMap[spi].dma_user_callback = nullptr;
    } else {
        // Not supported by SPI Slave
    }
}

int32_t hal_spi_set_settings(hal_spi_interface_t spi, uint8_t set_default, uint8_t clockdiv, uint8_t order, uint8_t mode, void* reserved) {
    if (set_default) {
        spiMap[spi].data_mode = DEFAULT_DATA_MODE;
        spiMap[spi].bit_order = DEFAULT_BIT_ORDER;
        spiMap[spi].clock = DEFAULT_SPI_CLOCK;
    } else {
        spiMap[spi].data_mode = mode;
        spiMap[spi].bit_order = order;
        spiMap[spi].clock = clockdiv;
    }

    if (spiMap[spi].state == HAL_SPI_STATE_ENABLED) {
        spiUninit(spi);
        spiInit(spi, spiMap[spi].spi_mode);
    }

    return 0;
}

int hal_spi_sleep(hal_spi_interface_t spi, bool sleep, void* reserved) {
    if (sleep) {
        CHECK_TRUE(hal_spi_is_enabled(spi), SYSTEM_ERROR_NONE);
        hal_spi_transfer_dma_cancel(spi);
        while (spiMap[spi].transmitting);
        spiUninit(spi);
        // spiUninit() clears pin function, retrieve it.
        HAL_Set_Pin_Function(spiMap[spi].sck_pin, PF_SPI);
        HAL_Set_Pin_Function(spiMap[spi].mosi_pin, PF_SPI);
        HAL_Set_Pin_Function(spiMap[spi].miso_pin, PF_SPI);
        spiMap[spi].state = HAL_SPI_STATE_SUSPENDED;
    } else {
        CHECK_TRUE(spiMap[spi].state == HAL_SPI_STATE_SUSPENDED, SYSTEM_ERROR_NONE);
        hal_spi_begin_ext(spi, spiMap[spi].spi_mode, spiMap[spi].ss_pin, nullptr);
    }
    return SYSTEM_ERROR_NONE;
}
