==> ingeniero2019/device-os/hal/src/stm32f2xx/spi_hal.c <==
#include <stddef.h>
#include "spi_hal.h"
#include "gpio_hal.h"
#include "pinmap_impl.h"
#include "interrupts_hal.h"
#include "debug.h"
#include "check.h"

void hal_spi_init(hal_spi_interface_t spi) {
    spiState[spi].bit_order_set = false;
    spiState[spi].data_mode_set = false;
    spiState[spi].clock_divider_set = false;
    spiState[spi].state = HAL_SPI_STATE_DISABLED;

    spiState[spi].ss_pin = spiMap[spi].ss_pin;
    spiState[spi].mode = SPI_MODE_MASTER;
    spiState[spi].ss_state = 0;
    spiState[spi].dma_current_transfer_length = 0;
    spiState[spi].dma_last_transfer_length = 0;
    spiState[spi].dma_configured = 0;
    spiState[spi].dma_aborted = 0;
}

void hal_spi_begin_ext(hal_spi_interface_t spi, hal_spi_mode_t mode, uint16_t pin, void* reserved) {
    if (pin == SPI_DEFAULT_SS) {
        pin = spiMap[spi].ss_pin;
    }

    if (mode == SPI_MODE_SLAVE && !HAL_Pin_Is_Valid(pin)) {
        return;
    }

    spiState[spi].ss_pin = pin;
    Hal_Pin_Info* PIN_MAP = HAL_Pin_Map();

    spiState[spi].mode = mode;

    /* Enable SPI Clock */
    *spiMap[spi].rcc_apb_register |= spiMap[spi].rcc_apb_clock_enable;
    *spiMap[spi].rcc_ahb_register |= spiMap[spi].rcc_ahb_clock_enable;

    /* Connect SPI pins to AF */
    GPIO_PinAFConfig(PIN_MAP[spiMap[spi].sck_pin].gpio_peripheral, PIN_MAP[spiMap[spi].sck_pin].gpio_pin_source, spiMap[spi].af_mapping);
    GPIO_PinAFConfig(PIN_MAP[spiMap[spi].miso_pin].gpio_peripheral, PIN_MAP[spiMap[spi].miso_pin].gpio_pin_source, spiMap[spi].af_mapping);
    GPIO_PinAFConfig(PIN_MAP[spiMap[spi].mosi_pin].gpio_peripheral, PIN_MAP[spiMap[spi].mosi_pin].gpio_pin_source, spiMap[spi].af_mapping);

    HAL_Pin_Mode(spiMap[spi].sck_pin, AF_OUTPUT_PUSHPULL);
    HAL_Pin_Mode(spiMap[spi].miso_pin, AF_OUTPUT_PUSHPULL);
    HAL_Pin_Mode(spiMap[spi].mosi_pin, AF_OUTPUT_PUSHPULL);

    if (mode == SPI_MODE_MASTER && HAL_Pin_Is_Valid(pin)) {
        // Ensure that there is no glitch on SS pin
        PIN_MAP[pin].gpio_peripheral->BSRRL = PIN_MAP[pin].gpio_pin;
        HAL_Pin_Mode(pin, OUTPUT);
    } else if (mode == SPI_MODE_SLAVE) {
        HAL_Pin_Mode(pin, INPUT);
    }

    /* SPI configuration */
    spiState[spi].init_structure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
    spiState[spi].init_structure.SPI_Mode = SPI_Mode_Master;
    spiState[spi].init_structure.SPI_DataSize = SPI_DataSize_8b;
    if(spiState[spi].data_mode_set != true) {
        //Default: SPI_MODE3
        spiState[spi].init_structure.SPI_CPOL = SPI_CPOL_High;
        spiState[spi].init_structure.SPI_CPHA = SPI_CPHA_2Edge;
    }
    spiState[spi].init_structure.SPI_NSS = SPI_NSS_Soft;

    if(spiState[spi].clock_divider_set != true) {
        /* Defaults to 15Mbit/s on SPI1, SPI2 and SPI3 */
        if(spi == HAL_SPI_INTERFACE1) {
            spiState[spi].init_structure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_4;//60/4=15
        } else {
            spiState[spi].init_structure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;//30/2=15
        }
    }
    if(spiState[spi].bit_order_set != true) {
        //Default: MSBFIRST
        spiState[spi].init_structure.SPI_FirstBit = SPI_FirstBit_MSB;
    }
    spiState[spi].init_structure.SPI_CRCPolynomial = 7;

    SPI_Init(spiMap[spi].peripheral, &spiState[spi].init_structure);

    if (mode == SPI_MODE_SLAVE) {
        /* Attach interrupt to slave select pin */
        HAL_InterruptExtraConfiguration irqConf = {0};
        irqConf.version = HAL_INTERRUPT_EXTRA_CONFIGURATION_VERSION_1;
        irqConf.IRQChannelPreemptionPriority = 1;
        irqConf.IRQChannelSubPriority = 0;

        HAL_Interrupts_Attach(pin, &spiOnSelectedHandler, (void*)(spi), CHANGE, &irqConf);

        /* Switch to slave mode */
        spiState[spi].init_structure.SPI_Mode = SPI_Mode_Slave;
        SPI_Init(spiMap[spi].peripheral, &spiState[spi].init_structure);
    }

    if (mode == SPI_MODE_MASTER) {
        /* SPI peripheral should not be enabled in Slave mode until the device is selected */
        SPI_Cmd(spiMap[spi].peripheral, ENABLE);
    }

    spiState[spi].state = HAL_SPI_STATE_ENABLED;
}

void hal_spi_set_bit_order(hal_spi_interface_t spi, uint8_t order) {
    spiSetBitOrderImpl(spi, order);

    if(spiState[spi].state == HAL_SPI_STATE_ENABLED) {
        SPI_Cmd(spiMap[spi].peripheral, DISABLE);
        SPI_Init(spiMap[spi].peripheral, &spiState[spi].init_structure);
        SPI_Cmd(spiMap[spi].peripheral, ENABLE);
    }

    spiState[spi].bit_order_set = true;
}

void hal_spi_set_data_mode(hal_spi_interface_t spi, uint8_t mode) {
    spiSetDataModeImpl(spi, mode);

    if(spiState[spi].state == HAL_SPI_STATE_ENABLED) {
        SPI_Cmd(spiMap[spi].peripheral, DISABLE);
        SPI_Init(spiMap[spi].peripheral, &spiState[spi].init_structure);
        SPI_Cmd(spiMap[spi].peripheral, ENABLE);
    }

    spiState[spi].data_mode_set = true;
}

void hal_spi_set_clock_divider(hal_spi_interface_t spi, uint8_t rate) {
    spiSetClockDividerImpl(spi, rate);

    SPI_Init(spiMap[spi].peripheral, &spiState[spi].init_structure);

    spiState[spi].clock_divider_set = true;
}

int32_t hal_spi_set_settings(hal_spi_interface_t spi, uint8_t set_default, uint8_t clockdiv, uint8_t order, uint8_t mode, void* reserved) {
    if (!set_default) {
        spiSetClockDividerImpl(spi, clockdiv);
        spiSetBitOrderImpl(spi, order);
        spiSetDataModeImpl(spi, mode);
    }

    spiState[spi].clock_divider_set = !set_default;
    spiState[spi].data_mode_set = !set_default;
    spiState[spi].bit_order_set = !set_default;

    if (set_default) {
        // hal_spi_end(spi);
        hal_spi_begin_ext(spi, spiState[spi].mode, spiState[spi].ss_pin, NULL);
    } else if (spiState[spi].state == HAL_SPI_STATE_ENABLED) {
        SPI_Cmd(spiMap[spi].peripheral, DISABLE);
        SPI_Init(spiMap[spi].peripheral, &spiState[spi].init_structure);
        SPI_Cmd(spiMap[spi].peripheral, ENABLE);
    }

    return 0;
}

uint16_t hal_spi_transfer(hal_spi_interface_t spi, uint16_t data) {
    if (spiState[spi].mode == SPI_MODE_SLAVE) {
        return 0;
    }
    if (spiState[spi].state != HAL_SPI_STATE_ENABLED) {
        return 0;
    }
    /* Wait for SPI Tx buffer empty */
    while (SPI_I2S_GetFlagStatus(spiMap[spi].peripheral, SPI_I2S_FLAG_TXE) == RESET);
    /* Send SPI1 data */
    SPI_I2S_SendData(spiMap[spi].peripheral, data);

    /* Wait for SPI data reception */
    while (SPI_I2S_GetFlagStatus(spiMap[spi].peripheral, SPI_I2S_FLAG_RXNE) == RESET);
    /* Read and return SPI received data */
    return SPI_I2S_ReceiveData(spiMap[spi].peripheral);
}

void hal_spi_transfer_dma(hal_spi_interface_t spi, void* tx_buffer, void* rx_buffer, uint32_t length, hal_spi_dma_user_callback userCallback) {
    if (spiState[spi].state != HAL_SPI_STATE_ENABLED) {
        return;
    }
    int32_t state = HAL_disable_irq();
    spiState[spi].dma_user_callback = userCallback;
    /* Config and initiate DMA transfer */
    spiDmaConfig(spi, tx_buffer, rx_buffer, length);
    if (spiState[spi].mode == SPI_MODE_SLAVE && spiState[spi].ss_state == 1) {
        SPI_Cmd(spiMap[spi].peripheral, ENABLE);
    }
    HAL_enable_irq(state);
}

void hal_spi_transfer_dma_cancel(hal_spi_interface_t spi) {
    if (spiState[spi].dma_configured) {
        spiState[spi].dma_aborted = 1;
        DMA_Cmd(spiMap[spi].tx_dma_stream, DISABLE);
        DMA_Cmd(spiMap[spi].rx_dma_stream, DISABLE);
    }
}

void hal_spi_info(hal_spi_interface_t spi, hal_spi_info_t* info, void* reserved) {
    info->system_clock = spi==HAL_SPI_INTERFACE1 ? 60000000 : 30000000;
    if (info->version >= HAL_SPI_INFO_VERSION_1) {
        int32_t state = HAL_disable_irq();
        if (spiState[spi].state == HAL_SPI_STATE_ENABLED) {
            uint32_t prescaler = (1 << ((spiState[spi].init_structure.SPI_BaudRatePrescaler / 8) + 1));
            info->clock = info->system_clock / prescaler;
        } else {
            info->clock = 0;
        }
        info->default_settings = !(spiState[spi].clock_divider_set || spiState[spi].data_mode_set || spiState[spi].bit_order_set);
        info->enabled = (spiState[spi].state == HAL_SPI_STATE_ENABLED);
        info->mode = spiState[spi].mode;
        info->bit_order = spiState[spi].init_structure.SPI_FirstBit == SPI_FirstBit_MSB ? MSBFIRST : LSBFIRST;
        info->data_mode = spiState[spi].init_structure.SPI_CPOL | spiState[spi].init_structure.SPI_CPHA;
        if (info->version >= HAL_SPI_INFO_VERSION_2) {
            info->ss_pin = spiState[spi].ss_pin;
        }
        HAL_enable_irq(state);
    }
}

int hal_spi_sleep(hal_spi_interface_t spi, bool sleep, void* reserved) {
    if (sleep) {
        CHECK_TRUE(hal_spi_is_enabled(spi), SYSTEM_ERROR_NONE);
        hal_spi_transfer_dma_cancel(spi);
        while (!spiState[spi].dma_aborted);
        if (spiState[spi].mode == SPI_MODE_SLAVE) {
            HAL_Interrupts_Detach(spiState[spi].ss_pin);
        }
        SPI_Cmd(spiMap[spi].peripheral, DISABLE);
        SPI_DeInit(spiMap[spi].peripheral);
        spiState[spi].state = HAL_SPI_STATE_SUSPENDED;
    } else {
        CHECK_TRUE(spiState[spi].state == HAL_SPI_STATE_SUSPENDED, SYSTEM_ERROR_NONE);
        hal_spi_begin_ext(spi, spiState[spi].mode, spiState[spi].ss_pin, NULL);
    }
    return SYSTEM_ERROR_NONE;
}
